fix: ui for french version in join component (button join) has been changed, all alignement has been updated. Redirection for state into profile page has been updated

--- a/src/frontend/static/style/components/Game/states/localHome/LocalComponent.css
+++ b/src/frontend/static/style/components/Game/states/localHome/LocalComponent.css
@@ -8,6 +8,10 @@ local-component {
 	animation: component-apparition 1s 0.3s forwards;
 }
 
+.local-component-french {
+	width: 50rem;
+}
+
 .local-component-content {
 	display: flex;
 	flex-direction: column;
