--- a/src/frontend/static/style/components/Game/states/onlineHome/RankedComponent.css
+++ b/src/frontend/static/style/components/Game/states/onlineHome/RankedComponent.css
@@ -78,9 +78,10 @@ ranked-component {
 
 /* Next rank generic infos */
 
-.rank-container-content .next-rank-infos .next-rank-infos {
+.rank-container-content .next-rank-infos {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .rank-container-content .next-rank-infos .next-rank-elo {
@@ -113,7 +114,6 @@ ranked-component {
 	width: 2rem;
 	margin-right: 3px;
 }
-
 
 /* Master rank style */
 
