--- a/src/frontend/static/style/views/change-password.css
+++ b/src/frontend/static/style/views/change-password.css
@@ -8,8 +8,8 @@
 
 .change-password-form-container {
 	position: relative;
-	height: 65%;
-	width: 30%;
+	height: 85rem;
+	width: 70rem;
 	background: var(--neon-gradiant);
 	padding: 3px;
 	border-radius: 10px;
@@ -18,8 +18,8 @@
 .change-password-form-container-background {
 	z-index: 0;
 	position: absolute;
-	height: 65%;
-	width: 30%;
+	height: 85rem;
+	width: 70rem;
 	background: var(--neon-gradiant);
 	filter: blur(15px);
 }
@@ -35,6 +35,7 @@
 	font-weight: 400;
 	letter-spacing: 1px;
 	margin-bottom: 7rem;
+	text-align: center;
 }
 
 .change-password-page form {
